# ray_tracing

./: .gitignore  Cargo.toml  image.ppm
src/: main.rs
src/ray_tracing/: camera.rs  color.rs  geom.rs  material.rs  mod.rs  object.rs  rand.rs  ray.rs
