[package]
name = "ray-tracing"
version = "0.1.0"
authors = ["Carlo Sana <sana.carlo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rayon = "1.5"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
# panic = "abort"

[profile.dev]
opt-level = 3