[package]
name = "ray-tracing"
version = "0.1.0"
authors = ["Carlo Sana <sana.carlo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8", features=["small_rng"]}
rayon = "1.5"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
debug = true
# panic = "abort"

[profile.dev]
opt-level = 3